--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 
+<head>
+  <meta charset="utf-8"/>
+  <title>app.creation</title>
+  <link rel="stylesheet"
+
+ href="https://fonts.googleapis.com/css?family=Roboto>
+
+  <link rel="stylesheet" href="styies.css">
+
+
+</head>
   <body>
+
     <header>
       <div>app/creation</div>
       <nav>
@@ -12,10 +24,9 @@
     </header>
 <section>
   <main>
-    <h1>building an App Without Design Expertise?</h1>
+    <h1 class="title">Building an App Without Design Expertise?</h1>
     <p>I help tech startups design better digital products without hiring a full-time designer</p>
     <button>Shedule free consultation</button>
-
 
   </main>
 <div>
