--- a/index.html
+++ b/index.html
@@ -2,13 +2,8 @@
 <head>
   <meta charset="utf-8"/>
   <title>app.creation</title>
-  <link rel="stylesheet"
-
- href="https://fonts.googleapis.com/css?family=Roboto>
-
-  <link rel="stylesheet" href="styies.css">
-
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto>
+   <link rel="stylesheet" href ="styles.css">
 </head>
   <body>
 
