--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <link rel="stylesheet" href ="styles.css">
 </head>
   <body>
-
+    <div class="wraper">
     <header class="<header>">
       <div class="logo">app/creation</div>
       <nav class="<menu>">
@@ -22,11 +22,10 @@
     <h1 class="main-content__title">Building an App Without Design Expertise?</h1>
     <p class="main-content__saubtitle">I help tech startups design better digital products without hiring a full-time designer</p>
     <button class="main-content__button" type="button" name="button">Shedule free consultation</button>
-
   </main>
 <div class="image-contetn">
   <img class="image-contetn__image" src="" alt="">
 </div>
-
 </section>
+</div>
 </body>
