--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <meta charset="utf-8"/>
   <title>app.creation</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-   <link rel="stylesheet" href ="styles.css">
+ <link rel="stylesheet" href ="styles.css">
 </head>
   <body>
     <div class="wraper">
     <header class="header">
-      <div class="logo">app/creation</div>
-      <nav class="menu">
+      <div class="logo"></div>
+             <nav class="menu">
           <a class="menu__item" href="#">start</a>
           <a class="menu__item" href="#">services</a>
           <a class="menu__item" href="#">about</a>
