--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <head>
   <meta charset="utf-8"/>
   <title>app.creation</title>
@@ -19,7 +18,7 @@
           <a class="menu__item" href="#">start</a>
           <a class="menu__item" href="#">services</a>
           <a class="menu__item" href="#">about</a>
-          <a class="menu__item" href="#">blog</a>
+          <a class="menu__item menu__item_active" href="#">blog</a>
           <a class="menu__item" href="#">contact us</a>
       </nav>
     </header>
