--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <head>
   <meta charset="utf-8"/>
   <title>app.creation</title>
@@ -19,15 +18,15 @@
           <a class="menu__item" href="#">start</a>
           <a class="menu__item" href="#">services</a>
           <a class="menu__item" href="#">about</a>
-          <a class="menu__item" href="#">blog</a>
+          <a class="menu__item menu__item_active" href="#">blog</a>
           <a class="menu__item" href="#">contact us</a>
       </nav>
     </header>
 <section class="main-section">
   <main class="main-content">
-    <h1 class="main-content__title">Building an App Without Design Expertise?</h1>
+    <h1 class="main-content__title">Building an App <span class="main-content__title-text_highlight">Without Design Expertise?</span></h1>
     <p class="main-content__saubtitle">I help tech startups design better digital products without hiring a full-time designer</p>
-    <button class="main-content__button" type="button" name="button">Shedule free consultation</button>
+    <a class="main-content__button" type="button" name="button">Schedule free consultation</a>
   </main>
 <div class="image-contetn">
   <img class="image-contetn__image" src="" alt="">
