--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="fonts.css">
  <link rel="stylesheet" href ="styles.css">
-</head>
+ </head>
   <body>
     <div class="wraper">
     <header class="header">
+      <meta name="viewport" content="width=device-width,intital-scale=1">
         <div class="logo">
         <div class="logo__circle logo__circle_color_dark-blue"></div>
         <div class="logo__circle logo__circle_color_blue"></div>
-        app.creation
+        <div class="logo__text">app.creation</div>
         </div>
       <!--<div class="logo"></div>-->
              <nav class="menu">
